# openclaw-cost-diff

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fixtures/: sample-openclaw-session.json  sample-openclaw.jsonl
fixtures/agents/live-agent/sessions/: ambiguous-time.jsonl  message-usage-cost.jsonl  numeric-time.jsonl  transcript  usage-without-cost.jsonl
packaging/homebrew/: openclaw-cost-diff.rb
src/openclaw_cost_diff/: __init__.py  cli.py  compare.py  loader.py  models.py  render.py  windows.py
tests/: test_compare.py  test_loader_cli.py  test_windows.py
