[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "openclaw-cost-diff"
version = "0.1.3"
description = "Compare OpenClaw token usage and API cost across time windows, agents, models, and channels."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Paul Frederiksen" }]
keywords = ["openclaw", "cli", "cost", "tokens", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/pfrederiksen/openclaw-cost-diff"
Repository = "https://github.com/pfrederiksen/openclaw-cost-diff"
Issues = "https://github.com/pfrederiksen/openclaw-cost-diff/issues"

[project.scripts]
openclaw-cost-diff = "openclaw_cost_diff.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_cost_diff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
